trying to prevent the need to scroll the form on mobile

--- a/manifest/source/envoke.less
+++ b/manifest/source/envoke.less
@@ -50,4 +50,11 @@
             z-index: 100;
         }
     }
+
+    .contact-modal .nvkContent h3 {
+        margin-top: -37px;
+        text-align: left !important;
+        margin-left: -3px;
+        margin-bottom: 5px;
+    }
 }
